# AppFramework

./: CMakeLists.txt  main.cpp
core/: App.cpp  App.h  CMakeLists.txt  Handler.cpp  Handler.h  Looper.cpp  Looper.h  Message.cpp  Message.h
